<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wifi Controlled Car</string>
    <string name="action_settings">Settings</string>
    <string name="devices">Network:</string>
    <string name="wifi">Wifi</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="refresh">Refresh</string>
    <string name="photoDescription">Last image received from the car</string>
    <string name="networkLbl">Looking for network name...</string>
    <string name="photoStorage">Path for photo storage on Android</string>
    <string name="speedAccelerationForward">Speed Acceleration Forward</string>
    <string name="speedAccelerationBackward">"Speed Acceleration Backward "</string>
    <string name="speedDecelerationForward">Speed Deceleration Forward</string>
    <string name="speedDecelerationBackward">Speed Deceleration Backward</string>
    <string name="speedDecTurnForward">Speed decrement when turning going forward</string>
    <string name="speedDecTurnBackward">Speed decrement when turning going backward</string>
    <string name="minSpeedForward">Minimal speed available forward direction</string>
    <string name="maxSpeedForward">Maximal speed available for forward direction</string>
    <string name="minSpeedBackward">Minimal speed available backward direction</string>
    <string name="maxSpeedBackward">Maximal speed available for backward direction</string>
    <string name="speedTurnMotor">Speed to use when turning</string>
    <string name="tonesList">List of tones</string>
    <string name="cameraWidth"><![CDATA[Camera width (Video & photo)]]></string>
    <string name="cameraHeight"><![CDATA[Camera height (Video & photo)]]></string>
    <string name="cameraFps">Video stream FPS</string>
    <string name="passwordSsh">SSH user password</string>
    <string name="userSsh">SSH user name</string>
    <string name="portNetwork">Server port</string>
    <string name="ipNetwork">Server IP address</string>

</resources>
