<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ToggleButton
        android:id="@+id/wifiBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/wifi"
        android:textOff="@string/off"
        android:textOn="@string/on" />

    <fragment
        android:id="@+id/devices"
        android:name="com.iha.wcc.fragment.network.NetworkFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/devicesLbl"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/wifiBtn"
        android:layout_below="@+id/wifiBtn" />

    <ImageButton
        android:id="@+id/refreshList"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/devices"
        android:layout_marginLeft="17dp"
        android:layout_toRightOf="@+id/devicesLbl"
        android:background="@drawable/selector_round_button_transparent"
        android:src="@drawable/ic_action_refresh" />

    <ImageView
        android:id="@+id/wifiImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/wifiBtn"
        android:layout_alignTop="@+id/wifiBtn"
        android:layout_toLeftOf="@+id/wifiBtn"
        android:src="@drawable/ic_wifi" />

    <TextView
        android:id="@+id/devicesLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/wifiBtn"
        android:layout_alignBottom="@+id/wifiBtn"
        android:layout_alignParentLeft="true"
        android:text="@string/devices"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

</RelativeLayout>
